--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,23 +65,30 @@
     <Compile Include="Assets\GameEvent.cs" />
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\Item.cs" />
+    <Compile Include="Assets\Map.cs" />
     <Compile Include="Assets\Player.cs" />
     <Compile Include="Assets\Unit.cs" />
     <Compile Include="Assets\Weapon.cs" />
     <None Include="Assets\Text\start.txt" />
+    <None Include="Assets\Text\startb.txt" />
     <None Include="Assets\Text\dadref.txt" />
+    <None Include="Assets\Text\starta.txt" />
+    <None Include="Assets\Text\Take 1\start0.txt" />
     <None Include="Assets\Text\characters.txt" />
-    <None Include="Assets\Text\start0a.txt" />
+    <None Include="Assets\Text\Maps\kaltan.txt" />
+    <None Include="Assets\Text\Take 1\start0a.txt" />
+    <None Include="Assets\Text\Take 1\start.txt" />
     <None Include="Assets\Text\test2.txt" />
     <None Include="Assets\Items\banana.txt" />
-    <None Include="Assets\Text\start3.txt" />
+    <None Include="Assets\Text\Take 1\start3.txt" />
     <None Include="Assets\Text\test3.txt" />
-    <None Include="Assets\Text\start2.txt" />
+    <None Include="Assets\Text\Take 1\start2.txt" />
     <None Include="Assets\Text\start0.txt" />
     <None Include="Assets\Text\test.txt" />
-    <None Include="Assets\Text\start3a.txt" />
-    <None Include="Assets\Text\start4.txt" />
-    <None Include="Assets\Text\start1.txt" />
+    <None Include="Assets\Text\Take 1\start3a.txt" />
+    <None Include="Assets\Text\Take 1\start4.txt" />
+    <None Include="Assets\Text\Take 1\start1.txt" />
+    <None Include="Assets\Text\Maps\kaltan_lab.txt" />
     <None Include="Assets\Items\Weapons\weapon.txt" />
     <None Include="Assets\Text\synopsys.txt" />
     <Reference Include="UnityEditor.StandardEvents">
